@startuml
'https://plantuml.com/class-diagram

abstract class Piece
Abstract Piece {
    -  forms: List
    -  rotation: int
    -  x: int
    -  y: int
    -  color: String
    -  height: int
    + getX()
    + getY()
    + getColor()
    + getRotation()
    + getForm()
    + setRotation()
    + setForms()
    + setColor()
    + setHeight()
    + setX()
    + setY()
    + rotate()
    + checkIfFits()
    + doRotate()
    + moveDown()
    + moveUp()
    + moveRight()
    + moveLeft()
    + checkRight()
    + checkLeft()
    + checkUnder()
}

Piece<|-- IPiece
Piece<|-- JPiece
Piece<|-- LPiece
Piece<|-- OPiece
Piece<|-- SPiece
Piece<|-- TPiece
Piece<|-- ZPiece

class IPiece {
    + createForms()
    + checkIfFits()
    + checkRight2()
}
class JPiece {
    + createForms()
}
class LPiece {
    + createForms()
}
class OPiece {
    + createForms()
}
class SPiece {
    + createForms()
}
class TPiece {
    + createForms()
}
class ZPiece {
    + createForms()
}

@enduml